--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Project music library implementing API which can perform CRUD operations on a database.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon -r dotenv/config index.js",
+    "start": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +22,7 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
